# xbox_control

./: .gitignore  CMakeLists.txt  README.md  README_CONFIG.md  build.sh  run.sh
config/: xbox_controller.yaml
include/: controller_base.hpp  controller_config.hpp  udp_publisher.hpp  udp_receiver.hpp  xbox_udp_protocol.hpp
src/: controller_base.cpp  controller_config.cpp  joystick.cpp  udp_publisher.cpp  udp_receiver.cpp  udp_receiver_test.cpp  vibration_sender.cpp  xbox_udp_publisher.cpp
